--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/xadparo/express-routree#readme",
   "dependencies": {
+    "@types/express": "^4.17.8",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.0.3"
   }
 }
