add npm scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "watch": "tsc --watch",
+    "dev": "nodemon .",
+    "test": "nodemon ./dist/test.js"
   },
   "repository": {
     "type": "git",
