--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-routree",
   "version": "1.2.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
